<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_color_background">

    <ListView
        android:id="@+id/add_mood_select_mood_list"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="#333F4F"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_select_mood_dropdown" />

    <Button
        android:id="@+id/add_select_mood_dropdown"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/edit_mood_edit_mood_button_background"
        android:backgroundTint="@null"
        android:drawableEnd="@drawable/edit_mood_drop_down_arrow"
        android:drawablePadding="10dp"
        android:gravity="center_vertical|start"
        android:minHeight="0dp"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:text="@string/select_mood"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_mood_text" />

    <TextView
        android:id="@+id/textViewEditMoodOptionalText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/optional"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_select_mood_dropdown" />

    <EditText
        android:id="@+id/add_reason"
        android:layout_width="340dp"
        android:layout_height="100dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/edit_mood_reason_text_box"
        android:gravity="start|top"
        android:hint="@string/enter_a_reason"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEditMoodOptionalText2" />

    <TextView
        android:id="@+id/textViewReasontext2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/reason"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/add_reason"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewSituation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Situation:"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_reason" />

    <ImageButton
        android:id="@+id/add_mood_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="112dp"
        android:background="@null"
        android:contentDescription="@string/image_selection"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSituation"
        app:srcCompat="@drawable/Image" />

    <TextView
        android:id="@+id/add_mood_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Add Mood"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewReasontext3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:text="Image"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_mood_image_button" />

    <Button
        android:id="@+id/add_mood_alone_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:text="Alone"
        app:layout_constraintBottom_toTopOf="@+id/add_mood_image_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSituation"
        app:layout_constraintVertical_bias="0.428" />

    <Button
        android:id="@+id/add_mood_pair_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:text="Pair"
        app:layout_constraintBottom_toTopOf="@+id/add_mood_image_button"
        app:layout_constraintStart_toEndOf="@+id/add_mood_alone_button"
        app:layout_constraintTop_toBottomOf="@+id/textViewSituation"
        app:layout_constraintVertical_bias="0.428" />

    <Button
        android:id="@+id/add_mood_group_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:text="Group"
        app:layout_constraintBottom_toTopOf="@+id/add_mood_image_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/add_mood_pair_button"
        app:layout_constraintTop_toBottomOf="@+id/textViewSituation"
        app:layout_constraintVertical_bias="0.428" />

    <Button
        android:id="@+id/add_confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="192dp"
        android:layout_marginTop="124dp"
        android:text="Confirm"
        app:layout_constraintStart_toEndOf="@+id/add_mood_image_button"
        app:layout_constraintTop_toBottomOf="@+id/textViewSituation" />

</androidx.constraintlayout.widget.ConstraintLayout>